force-app/main/default/objects/Account_Weekly_Report__c/Account_Weekly_Report__c.object-meta.xml
<CustomObject>
    <label>Customer Weekly Report</label>
    <nameField>
        <displayFormat>W-{YYYY}{MM}-{000000000}</displayFormat>
        <label>Customer Weekly Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Weekly Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>