force-app/main/default/objects/Account_Weekly_Report__c/fields/Reasons_Growth_Decline__c.field-meta.xml
<CustomField>
    <fullName>Reasons_Growth_Decline__c</fullName>
    <label>Reasons for Growth/Decline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>