force-app/main/default/objects/Account_Weekly_Report__c/fields/Week_11__c.field-meta.xml
<CustomField>
    <fullName>Week_11__c</fullName>
    <label>Week 11</label>
    <type>TextArea</type>
</CustomField>