force-app/main/default/objects/Account_Weekly_Report__c/fields/Week_14__c.field-meta.xml
<CustomField>
    <fullName>Week_14__c</fullName>
    <label>Week 14</label>
    <type>TextArea</type>
</CustomField>