force-app/main/default/objects/Account_Weekly_Report__c/fields/Week_16__c.field-meta.xml
<CustomField>
    <fullName>Week_16__c</fullName>
    <label>Week 16</label>
    <type>TextArea</type>
</CustomField>